--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,6 +25,7 @@
         android:layout_marginTop="32dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
+        android:textAlignment="textEnd"
         android:paddingStart="8dp"
         android:paddingEnd="8dp"
         android:hint="@string/et_answer_hint"
